parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    COMMENT
    DOUBLEDOT
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> beginend
Rule 1     beginend -> begin codigo end
Rule 2     codigo -> sentencia
Rule 3     codigo -> sentencia codigo
Rule 4     sentencia -> libreria
Rule 5     sentencia -> variable
Rule 6     sentencia -> control
Rule 7     sentencia -> definicion
Rule 8     sentencia -> procedimiento
Rule 9     sentencia -> funcion
Rule 10    sentencia -> loop
Rule 11    definicion -> var LPAREN IDENT VAR_ASSING tipo RPAREN SEMICOLON
Rule 12    variable -> IDENT ASSING tipo SEMICOLON
Rule 13    tipo -> TEXTO
Rule 14    tipo -> ENTERO
Rule 15    tipo -> DECIMAL
Rule 16    tipo -> LOGICO
Rule 17    control -> if
Rule 18    control -> ifelse
Rule 19    control -> while
Rule 20    if -> tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
Rule 21    ifelse -> tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE else
Rule 22    else -> tk_else LBRACE codigo RBRACE SEMICOLON
Rule 23    while -> tk_while LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
Rule 24    funcion -> function tipo LPAREN argumento RPAREN SEMICOLON
Rule 25    procedimiento -> procedure IDENT LPAREN argumento RPAREN SEMICOLON
Rule 26    pin -> PIN LPAREN ENTERO SPACE conector RPAREN SEMICOLON
Rule 27    conector -> IN
Rule 28    conector -> OUT
Rule 29    argumento -> argumento
Rule 30    argumento -> LPAREN IDENT VAR_ASSING tipo RPAREN
Rule 31    argumento -> empty
Rule 32    libreria -> library LPAREN SINGLEDOT TEXTO PUNTO TEXTO SINGLEDOT RPAREN SEMICOLON
Rule 33    loop -> adelante
Rule 34    loop -> atras
Rule 35    loop -> izquierda
Rule 36    loop -> derecha
Rule 37    loop -> esperar
Rule 38    loop -> parar
Rule 39    loop -> empty
Rule 40    adelante -> foward LPAREN RPAREN SEMICOLON
Rule 41    atras -> backward LPAREN RPAREN SEMICOLON
Rule 42    izquierda -> left LPAREN RPAREN SEMICOLON
Rule 43    derecha -> right LPAREN RPAREN SEMICOLON
Rule 44    esperar -> wait LPAREN ENTERO RPAREN SEMICOLON
Rule 45    parar -> stop LPAREN RPAREN SEMICOLON
Rule 46    expression -> expression SUM term
Rule 47    expression -> expression RESTA term
Rule 48    expression -> term
Rule 49    expression -> tipo
Rule 50    expression -> variable
Rule 51    term -> term PROD factor
Rule 52    term -> term DIV factor
Rule 53    term -> factor
Rule 54    factor -> ENTERO
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    condicion -> expression relacion expression
Rule 57    condicion -> NOT expression
Rule 58    condicion -> expression logico expression
Rule 59    relacion -> IGUAL
Rule 60    relacion -> MAYOR
Rule 61    relacion -> MENOR
Rule 62    relacion -> MAYOR_IGUAL
Rule 63    relacion -> MENOR_IGUAL
Rule 64    logico -> and
Rule 65    logico -> or
Rule 66    empty -> <empty>

Terminals, with rules where they appear

ASSING               : 12
COMMA                : 
COMMENT              : 
DECIMAL              : 15
DIV                  : 52
DOUBLEDOT            : 
ENTERO               : 14 26 44 54
IDENT                : 11 12 25 30
IGUAL                : 59
IN                   : 27
LBRACE               : 20 21 22 23
LBRACKET             : 
LOGICO               : 16
LPAREN               : 11 20 21 23 24 25 26 30 32 40 41 42 43 44 45 55
MAYOR                : 60
MAYOR_IGUAL          : 62
MENOR                : 61
MENOR_IGUAL          : 63
NOT                  : 57
OUT                  : 28
PIN                  : 26
PROD                 : 51
PUNTO                : 32
RBRACE               : 20 21 22 23
RBRACKET             : 
RESTA                : 47
RPAREN               : 11 20 21 23 24 25 26 30 32 40 41 42 43 44 45 55
SEMICOLON            : 11 12 20 22 23 24 25 26 32 40 41 42 43 44 45
SINGLEDOT            : 32 32
SPACE                : 26
SUM                  : 46
TEXTO                : 13 32 32
VAR_ASSING           : 11 30
and                  : 64
backward             : 41
begin                : 1
end                  : 1
error                : 
foward               : 40
function             : 24
left                 : 42
library              : 32
or                   : 65
procedure            : 25
right                : 43
stop                 : 45
tk_else              : 22
tk_if                : 20 21
tk_while             : 23
var                  : 11
wait                 : 44

Nonterminals, with rules where they appear

adelante             : 33
argumento            : 24 25 29
atras                : 34
beginend             : 0
codigo               : 1 3 20 21 22 23
condicion            : 20 21 23
conector             : 26
control              : 6
definicion           : 7
derecha              : 36
else                 : 21
empty                : 31 39
esperar              : 37
expression           : 46 47 55 56 56 57 58 58
factor               : 51 52 53
funcion              : 9
if                   : 17
ifelse               : 18
izquierda            : 35
libreria             : 4
logico               : 58
loop                 : 10
parar                : 38
pin                  : 
procedimiento        : 8
relacion             : 56
sentencia            : 2 3
term                 : 46 47 48 51 52
tipo                 : 11 12 24 30 49
variable             : 5 50
while                : 19

Parsing method: LALR

state 0

    (0) S' -> . beginend
    (1) beginend -> . begin codigo end

    begin           shift and go to state 2

    beginend                       shift and go to state 1

state 1

    (0) S' -> beginend .



state 2

    (1) beginend -> begin . codigo end
    (2) codigo -> . sentencia
    (3) codigo -> . sentencia codigo
    (4) sentencia -> . libreria
    (5) sentencia -> . variable
    (6) sentencia -> . control
    (7) sentencia -> . definicion
    (8) sentencia -> . procedimiento
    (9) sentencia -> . funcion
    (10) sentencia -> . loop
    (32) libreria -> . library LPAREN SINGLEDOT TEXTO PUNTO TEXTO SINGLEDOT RPAREN SEMICOLON
    (12) variable -> . IDENT ASSING tipo SEMICOLON
    (17) control -> . if
    (18) control -> . ifelse
    (19) control -> . while
    (11) definicion -> . var LPAREN IDENT VAR_ASSING tipo RPAREN SEMICOLON
    (25) procedimiento -> . procedure IDENT LPAREN argumento RPAREN SEMICOLON
    (24) funcion -> . function tipo LPAREN argumento RPAREN SEMICOLON
    (33) loop -> . adelante
    (34) loop -> . atras
    (35) loop -> . izquierda
    (36) loop -> . derecha
    (37) loop -> . esperar
    (38) loop -> . parar
    (39) loop -> . empty
    (20) if -> . tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
    (21) ifelse -> . tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE else
    (23) while -> . tk_while LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
    (40) adelante -> . foward LPAREN RPAREN SEMICOLON
    (41) atras -> . backward LPAREN RPAREN SEMICOLON
    (42) izquierda -> . left LPAREN RPAREN SEMICOLON
    (43) derecha -> . right LPAREN RPAREN SEMICOLON
    (44) esperar -> . wait LPAREN ENTERO RPAREN SEMICOLON
    (45) parar -> . stop LPAREN RPAREN SEMICOLON
    (66) empty -> .

  ! shift/reduce conflict for library resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for var resolved as shift
  ! shift/reduce conflict for procedure resolved as shift
  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for tk_if resolved as shift
  ! shift/reduce conflict for tk_while resolved as shift
  ! shift/reduce conflict for foward resolved as shift
  ! shift/reduce conflict for backward resolved as shift
  ! shift/reduce conflict for left resolved as shift
  ! shift/reduce conflict for right resolved as shift
  ! shift/reduce conflict for wait resolved as shift
  ! shift/reduce conflict for stop resolved as shift
    library         shift and go to state 12
    IDENT           shift and go to state 13
    var             shift and go to state 17
    procedure       shift and go to state 18
    function        shift and go to state 19
    tk_if           shift and go to state 27
    tk_while        shift and go to state 28
    foward          shift and go to state 29
    backward        shift and go to state 30
    left            shift and go to state 31
    right           shift and go to state 32
    wait            shift and go to state 33
    stop            shift and go to state 34
    end             reduce using rule 66 (empty -> .)

  ! library         [ reduce using rule 66 (empty -> .) ]
  ! IDENT           [ reduce using rule 66 (empty -> .) ]
  ! var             [ reduce using rule 66 (empty -> .) ]
  ! procedure       [ reduce using rule 66 (empty -> .) ]
  ! function        [ reduce using rule 66 (empty -> .) ]
  ! tk_if           [ reduce using rule 66 (empty -> .) ]
  ! tk_while        [ reduce using rule 66 (empty -> .) ]
  ! foward          [ reduce using rule 66 (empty -> .) ]
  ! backward        [ reduce using rule 66 (empty -> .) ]
  ! left            [ reduce using rule 66 (empty -> .) ]
  ! right           [ reduce using rule 66 (empty -> .) ]
  ! wait            [ reduce using rule 66 (empty -> .) ]
  ! stop            [ reduce using rule 66 (empty -> .) ]

    codigo                         shift and go to state 3
    sentencia                      shift and go to state 4
    libreria                       shift and go to state 5
    variable                       shift and go to state 6
    control                        shift and go to state 7
    definicion                     shift and go to state 8
    procedimiento                  shift and go to state 9
    funcion                        shift and go to state 10
    loop                           shift and go to state 11
    if                             shift and go to state 14
    ifelse                         shift and go to state 15
    while                          shift and go to state 16
    adelante                       shift and go to state 20
    atras                          shift and go to state 21
    izquierda                      shift and go to state 22
    derecha                        shift and go to state 23
    esperar                        shift and go to state 24
    parar                          shift and go to state 25
    empty                          shift and go to state 26

state 3

    (1) beginend -> begin codigo . end

    end             shift and go to state 35


state 4

    (2) codigo -> sentencia .
    (3) codigo -> sentencia . codigo
    (2) codigo -> . sentencia
    (3) codigo -> . sentencia codigo
    (4) sentencia -> . libreria
    (5) sentencia -> . variable
    (6) sentencia -> . control
    (7) sentencia -> . definicion
    (8) sentencia -> . procedimiento
    (9) sentencia -> . funcion
    (10) sentencia -> . loop
    (32) libreria -> . library LPAREN SINGLEDOT TEXTO PUNTO TEXTO SINGLEDOT RPAREN SEMICOLON
    (12) variable -> . IDENT ASSING tipo SEMICOLON
    (17) control -> . if
    (18) control -> . ifelse
    (19) control -> . while
    (11) definicion -> . var LPAREN IDENT VAR_ASSING tipo RPAREN SEMICOLON
    (25) procedimiento -> . procedure IDENT LPAREN argumento RPAREN SEMICOLON
    (24) funcion -> . function tipo LPAREN argumento RPAREN SEMICOLON
    (33) loop -> . adelante
    (34) loop -> . atras
    (35) loop -> . izquierda
    (36) loop -> . derecha
    (37) loop -> . esperar
    (38) loop -> . parar
    (39) loop -> . empty
    (20) if -> . tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
    (21) ifelse -> . tk_if LPAREN condicion RPAREN LBRACE codigo RBRACE else
    (23) while -> . tk_while LPAREN condicion RPAREN LBRACE codigo RBRACE SEMICOLON
    (40) adelante -> . foward LPAREN RPAREN SEMICOLON
    (41) atras -> . backward LPAREN RPAREN SEMICOLON
    (42) izquierda -> . left LPAREN RPAREN SEMICOLON
    (43) derecha -> . right LPAREN RPAREN SEMICOLON
    (44) esperar -> . wait LPAREN ENTERO RPAREN SEMICOLON
    (45) parar -> . stop LPAREN RPAREN SEMICOLON
    (66) empty -> .

  ! shift/reduce conflict for library resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for var resolved as shift
  ! shift/reduce conflict for procedure resolved as shift
  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for tk_if resolved as shift
  ! shift/reduce conflict for tk_while resolved as shift
  ! shift/reduce conflict for foward resolved as shift
  ! shift/reduce conflict for backward resolved as shift
  ! shift/reduce conflict for left resolved as shift
  ! shift/reduce conflict for right resolved as shift
  ! shift/reduce conflict for wait resolved as shift
  ! shift/reduce conflict for stop resolved as shift
  ! reduce/reduce conflict for end resolved using rule 2 (codigo -> sentencia .)
  ! reduce/reduce conflict for RBRACE resolved using rule 2 (codigo -> sentencia .)
    end             reduce using rule 2 (codigo -> sentencia .)
    RBRACE          reduce using rule 2 (codigo -> sentencia .)
    library         shift and go to state 12
    IDENT           shift and go to state 13
    var             shift and go to state 17
    procedure       shift and go to state 18
    function        shift and go to state 19
    tk_if           shift and go to state 27
    tk_while        shift and go to state 28
    foward          shift and go to state 29
    backward        shift and go to state 30
    left            shift and go to state 31
    right           shift and go to state 32
    wait            shift and go to state 33
    stop            shift and go to state 34

  ! library         [ reduce using rule 66 (empty -> .) ]
  ! IDENT           [ reduce using rule 66 (empty -> .) ]
  ! var             [ reduce using rule 66 (empty -> .) ]
  ! procedure       [ reduce using rule 66 (empty -> .) ]
  ! function        [ reduce using rule 66 (empty -> .) ]
  ! tk_if           [ reduce using rule 66 (empty -> .) ]
  ! tk_while        [ reduce using rule 66 (empty -> .) ]
  ! foward          [ reduce using rule 66 (empty -> .) ]
  ! backward        [ reduce using rule 66 (empty -> .) ]
  ! left            [ reduce using rule 66 (empty -> .) ]
  ! right           [ reduce using rule 66 (empty -> .) ]
  ! wait            [ reduce using rule 66 (empty -> .) ]
  ! stop            [ reduce using rule 66 (empty -> .) ]
  ! end             [ reduce using rule 66 (empty -> .) ]
  ! RBRACE          [ reduce using rule 66 (empty -> .) ]

    sentencia                      shift and go to state 4
    codigo                         shift and go to state 36
    libreria                       shift and go to state 5
    variable                       shift and go to state 6
    control                        shift and go to state 7
    definicion                     shift and go to state 8
    procedimiento                  shift and go to state 9
    funcion                        shift and go to state 10
    loop                           shift and go to state 11
    if                             shift and go to state 14
    ifelse                         shift and go to state 15
    while                          shift and go to state 16
    adelante                       shift and go to state 20
    atras                          shift and go to state 21
    izquierda                      shift and go to state 22
    derecha                        shift and go to state 23
    esperar                        shift and go to state 24
    parar                          shift and go to state 25
    empty                          shift and go to state 26

state 5

    (4) sentencia -> libreria .

    library         reduce using rule 4 (sentencia -> libreria .)
    IDENT           reduce using rule 4 (sentencia -> libreria .)
    var             reduce using rule 4 (sentencia -> libreria .)
    procedure       reduce using rule 4 (sentencia -> libreria .)
    function        reduce using rule 4 (sentencia -> libreria .)
    tk_if           reduce using rule 4 (sentencia -> libreria .)
    tk_while        reduce using rule 4 (sentencia -> libreria .)
    foward          reduce using rule 4 (sentencia -> libreria .)
    backward        reduce using rule 4 (sentencia -> libreria .)
    left            reduce using rule 4 (sentencia -> libreria .)
    right           reduce using rule 4 (sentencia -> libreria .)
    wait            reduce using rule 4 (sentencia -> libreria .)
    stop            reduce using rule 4 (sentencia -> libreria .)
    end             reduce using rule 4 (sentencia -> libreria .)
    RBRACE          reduce using rule 4 (sentencia -> libreria .)


state 6

    (5) sentencia -> variable .

    library         reduce using rule 5 (sentencia -> variable .)
    IDENT           reduce using rule 5 (sentencia -> variable .)
    var             reduce using rule 5 (sentencia -> variable .)
    procedure       reduce using rule 5 (sentencia -> variable .)
    function        reduce using rule 5 (sentencia -> variable .)
    tk_if           reduce using rule 5 (sentencia -> variable .)
    tk_while        reduce using rule 5 (sentencia -> variable .)
    foward          reduce using rule 5 (sentencia -> variable .)
    backward        reduce using rule 5 (sentencia -> variable .)
    left            reduce using rule 5 (sentencia -> variable .)
    right           reduce using rule 5 (sentencia -> variable .)
    wait            reduce using rule 5 (sentencia -> variable .)
    stop            reduce using rule 5 (sentencia -> variable .)
    end             reduce using rule 5 (sentencia -> variable .)
    RBRACE          reduce using rule 5 (sentencia -> variable .)


state 7

    (6) sentencia -> control .

    library         reduce using rule 6 (sentencia -> control .)
    IDENT           reduce using rule 6 (sentencia -> control .)
    var             reduce using rule 6 (sentencia -> control .)
    procedure       reduce using rule 6 (sentencia -> control .)
    function        reduce using rule 6 (sentencia -> control .)
    tk_if           reduce using rule 6 (sentencia -> control .)
    tk_while        reduce using rule 6 (sentencia -> control .)
    foward          reduce using rule 6 (sentencia -> control .)
    backward        reduce using rule 6 (sentencia -> control .)
    left            reduce using rule 6 (sentencia -> control .)
    right           reduce using rule 6 (sentencia -> control .)
    wait            reduce using rule 6 (sentencia -> control .)
    stop            reduce using rule 6 (sentencia -> control .)
    end             reduce using rule 6 (sentencia -> control .)
    RBRACE          reduce using rule 6 (sentencia -> control .)


state 8

    (7) sentencia -> definicion .

    library         reduce using rule 7 (sentencia -> definicion .)
    IDENT           reduce using rule 7 (sentencia -> definicion .)
    var             reduce using rule 7 (sentencia -> definicion .)
    procedure       reduce using rule 7 (sentencia -> definicion .)
    function        reduce using rule 7 (sentencia -> definicion .)
    tk_if           reduce using rule 7 (sentencia -> definicion .)
    tk_while        reduce using rule 7 (sentencia -> definicion .)
    foward          reduce using rule 7 (sentencia -> definicion .)
    backward        reduce using rule 7 (sentencia -> definicion .)
    left            reduce using rule 7 (sentencia -> definicion .)
    right           reduce using rule 7 (sentencia -> definicion .)
    wait            reduce using rule 7 (sentencia -> definicion .)
    stop            reduce using rule 7 (sentencia -> definicion .)
    end             reduce using rule 7 (sentencia -> definicion .)
    RBRACE          reduce using rule 7 (sentencia -> definicion .)


state 9

    (8) sentencia -> procedimiento .

    library         reduce using rule 8 (sentencia -> procedimiento .)
    IDENT           reduce using rule 8 (sentencia -> procedimiento .)
    var             reduce using rule 8 (sentencia -> procedimiento .)
    procedure       reduce using rule 8 (sentencia -> procedimiento .)
    function        reduce using rule 8 (sentencia -> procedimiento .)
    tk_if           reduce using rule 8 (sentencia -> procedimiento .)
    tk_while        reduce using rule 8 (sentencia -> procedimiento .)
    foward          reduce using rule 8 (sentencia -> procedimiento .)
    backward        reduce using rule 8 (sentencia -> procedimiento .)
    left            reduce using rule 8 (sentencia -> procedimiento .)
    right           reduce using rule 8 (sentencia -> procedimiento .)
    wait            reduce using rule 8 (sentencia -> procedimiento .)
    stop            reduce using rule 8 (sentencia -> procedimiento .)
    end             reduce using rule 8 (sentencia -> procedimiento .)
    RBRACE          reduce using rule 8 (sentencia -> procedimiento .)


state 10

    (9) sentencia -> funcion .

    library         reduce using rule 9 (sentencia -> funcion .)
    IDENT           reduce using rule 9 (sentencia -> funcion .)
    var             reduce using rule 9 (sentencia -> funcion .)
    procedure       reduce using rule 9 (sentencia -> funcion .)
    function        reduce using rule 9 (sentencia -> funcion .)
    tk_if           reduce using rule 9 (sentencia -> funcion .)
    tk_while        reduce using rule 9 (sentencia -> funcion .)
    foward          reduce using rule 9 (sentencia -> funcion .)
    backward        reduce using rule 9 (sentencia -> funcion .)
    left            reduce using rule 9 (sentencia -> funcion .)
    right           reduce using rule 9 (sentencia -> funcion .)
    wait            reduce using rule 9 (sentencia -> funcion .)
    stop            reduce using rule 9 (sentencia -> funcion .)
    end             reduce using rule 9 (sentencia -> funcion .)
    RBRACE          reduce using rule 9 (sentencia -> funcion .)


state 11

    (10) sentencia -> loop .

    library         reduce using rule 10 (sentencia -> loop .)
    IDENT           reduce using rule 10 (sentencia -> loop .)
    var             reduce using rule 10 (sentencia -> loop .)
    procedure       reduce using rule 10 (sentencia -> loop .)
    function        reduce using rule 10 (sentencia -> loop .)
    tk_if           reduce using rule 10 (sentencia -> loop .)
    tk_while        reduce using rule 10 (sentencia -> loop .)
    foward          reduce using rule 10 (sentencia -> loop .)
    backward        reduce using rule 10 (sentencia -> loop .)
    left            reduce using rule 10 (sentencia -> loop .)
    right           reduce using rule 10 (sentencia -> loop .)
    wait            reduce using rule 10 (sentencia -> loop .)
    stop            reduce using rule 10 (sentencia -> loop .)
    end             reduce using rule 10 (sentencia -> loop .)
    RBRACE          reduce using rule 10 (sentencia -> loop .)


state 12

    (32) libreria -> library . LPAREN SINGLEDOT TEXTO PUNTO TEXTO SINGLEDOT RPAREN SEMICOLON

    LPAREN          shift and go to state 37


state 13

    (12) variable -> IDENT . ASSING tipo SEMICOLON

    ASSING          shift and go to state 38


state 14

    (17) control -> if .

    library         reduce using rule 17 (control -> if .)
    IDENT           reduce using rule 17 (control -> if .)
    var             reduce using rule 17 (control -> if .)
    procedure       reduce using rule 17 (control -> if .)
    function        reduce using rule 17 (control -> if .)
    tk_if           reduce using rule 17 (control -> if .)
    tk_while        reduce using rule 17 (control -> if .)
    foward          reduce using rule 17 (control -> if .)
    backward        reduce using rule 17 (control -> if .)
    left            reduce using rule 17 (control -> if .)
    right           reduce using rule 17 (control -> if .)
    wait            reduce using rule 17 (control -> if .)
    stop            reduce using rule 17 (control -> if .)
    end             reduce using rule 17 (control -> if .)
    RBRACE          reduce using rule 17 (control -> if .)


state 15

    (18) control -> ifelse .

    library         reduce using rule 18 (control -> ifelse .)
    IDENT           reduce using rule 18 (control -> ifelse .)
    var             reduce using rule 18 (control -> ifelse .)
    procedure       reduce using rule 18 (control -> ifelse .)
    function        reduce using rule 18 (control -> ifelse .)
    tk_if           reduce using rule 18 (control -> ifelse .)
    tk_while        reduce using rule 18 (control -> ifelse .)
    foward          reduce using rule 18 (control -> ifelse .)
    backward        reduce using rule 18 (control -> ifelse .)
    left            reduce using rule 18 (control -> ifelse .)
    right           reduce using rule 18 (control -> ifelse .)
    wait            reduce using rule 18 (control -> ifelse .)
    stop            reduce using rule 18 (control -> ifelse .)
    end             reduce using rule 18 (control -> ifelse .)
    RBRACE          reduce using rule 18 (control -> ifelse .)


state 16

    (19) control -> while .

    library         reduce using rule 19 (control -> while .)
    IDENT           reduce using rule 19 (control -> while .)
    var             reduce using rule 19 (control -> while .)
    procedure       reduce using rule 19 (control -> while .)
    function        reduce using rule 19 (control -> while .)
    tk_if           reduce using rule 19 (control -> while .)
    tk_while        reduce using rule 19 (control -> while .)
    foward          reduce using rule 19 (control -> while .)
    backward        reduce using rule 19 (control -> while .)
    left            reduce using rule 19 (control -> while .)
    right           reduce using rule 19 (control -> while .)
    wait            reduce using rule 19 (control -> while .)
    stop            reduce using rule 19 (control -> while .)
    end             reduce using rule 19 (control -> while .)
    RBRACE          reduce using rule 19 (control -> while .)


state 17

    (11) definicion -> var . LPAREN IDENT VAR_ASSING tipo RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 18

    (25) procedimiento -> procedure . IDENT LPAREN argumento RPAREN SEMICOLON

    IDENT           shift and go to state 40


state 19

    (24) funcion -> function . tipo LPAREN argumento RPAREN SEMICOLON
    (13) tipo -> . TEXTO
    (14) tipo -> . ENTERO
    (15) tipo -> . DECIMAL
    (16) tipo -> . LOGICO

    TEXTO           shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    LOGICO          shift and go to state 45

    tipo                           shift and go to state 41

state 20

    (33) loop -> adelante .

    library         reduce using rule 33 (loop -> adelante .)
    IDENT           reduce using rule 33 (loop -> adelante .)
    var             reduce using rule 33 (loop -> adelante .)
    procedure       reduce using rule 33 (loop -> adelante .)
    function        reduce using rule 33 (loop -> adelante .)
    tk_if           reduce using rule 33 (loop -> adelante .)
    tk_while        reduce using rule 33 (loop -> adelante .)
    foward          reduce using rule 33 (loop -> adelante .)
    backward        reduce using rule 33 (loop -> adelante .)
    left            reduce using rule 33 (loop -> adelante .)
    right           reduce using rule 33 (loop -> adelante .)
    wait            reduce using rule 33 (loop -> adelante .)
    stop            reduce using rule 33 (loop -> adelante .)
    end             reduce using rule 33 (loop -> adelante .)
    RBRACE          reduce using rule 33 (loop -> adelante .)


state 21

    (34) loop -> atras .

    library         reduce using rule 34 (loop -> atras .)
    IDENT           reduce using rule 34 (loop -> atras .)
    var             reduce using rule 34 (loop -> atras .)
    procedure       reduce using rule 34 (loop -> atras .)
    function        reduce using rule 34 (loop -> atras .)
    tk_if           reduce using rule 34 (loop -> atras .)
    tk_while        reduce using rule 34 (loop -> atras .)
    foward          reduce using rule 34 (loop -> atras .)
    backward        reduce using rule 34 (loop -> atras .)
    left            reduce using rule 34 (loop -> atras .)
    right           reduce using rule 34 (loop -> atras .)
    wait            reduce using rule 34 (loop -> atras .)
    stop            reduce using rule 34 (loop -> atras .)
    end             reduce using rule 34 (loop -> atras .)
    RBRACE          reduce using rule 34 (loop -> atras .)


state 22

    (35) loop -> izquierda .

    library         reduce using rule 35 (loop -> izquierda .)
    IDENT           reduce using rule 35 (loop -> izquierda .)
    var             reduce using rule 35 (loop -> izquierda .)
    procedure       reduce using rule 35 (loop -> izquierda .)
    function        reduce using rule 35 (loop -> izquierda .)
    tk_if           reduce using rule 35 (loop -> izquierda .)
    tk_while        reduce using rule 35 (loop -> izquierda .)
    foward          reduce using rule 35 (loop -> izquierda .)
    backward        reduce using rule 35 (loop -> izquierda .)
    left            reduce using rule 35 (loop -> izquierda .)
    right           reduce using rule 35 (loop -> izquierda .)
    wait            reduce using rule 35 (loop -> izquierda .)
    stop            reduce using rule 35 (loop -> izquierda .)
    end             reduce using rule 35 (loop -> izquierda .)
    RBRACE          reduce using rule 35 (loop -> izquierda .)


state 23

    (36) loop -> derecha .

    library         reduce using rule 36 (loop -> derecha .)
    IDENT           reduce using rule 36 (loop -> derecha .)
    var             reduce using rule 36 (loop -> derecha .)
    procedure       reduce using rule 36 (loop -> derecha .)
    function        reduce using rule 36 (loop -> derecha .)
    tk_if           reduce using rule 36 (loop -> derecha .)
    tk_while        reduce using rule 36 (loop -> derecha .)
    foward          reduce using rule 36 (loop -> derecha .)
    backward        reduce using rule 36 (loop -> derecha .)
    left            reduce using rule 36 (loop -> derecha .)
    right           reduce using rule 36 (loop -> derecha .)
    wait            reduce using rule 36 (loop -> derecha .)
    stop            reduce using rule 36 (loop -> derecha .)
    end             reduce using rule 36 (loop -> derecha .)
    RBRACE          reduce using rule 36 (loop -> derecha .)


state 24

    (37) loop -> esperar .
